--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							긴 글 읽어주셔서 감사합니다.긴 글 읽어주셔서 감사합니다. </p> -->
 							<p class="copyright">
 							현재의 '나'를 정의내려 가둬놓기보다는 한걸음씩 나아가며 '나'를 찾아가고 싶습니다. <br>
-							이번 애플아카데미에서의 소중한 배움의 여정에 함께 하길 소망합니다.<br>
+							배움의 기쁨을 소중히 하며 차근차근 성장해나가는 것을 추구합니다.<br>
 							긴 글 읽어주셔서 감사합니다.
 							</p>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
