--- a/generic.html
+++ b/generic.html
@@ -35,11 +35,11 @@
 								<p><br><br>
 							       · 기간 : 2020.05 - 2021.02<br>
 								   · 목표 : 신규계열사 설립 및 1호점 카페 런칭</p>
-								<p> 제가 속했던 기획·영업팀이 신설된 가장 큰 이유 중 하나는 공간 창출의 이점을 살려 
+								<p> 제가 속했던 기획팀이 신설된 가장 큰 이유 중 하나는 공간 창출의 이점을 살려 
 									신규계열사인 (주)지음푸디를 설립하여 사업 확장을 하기 위함이었습니다.
 									팀이 신설되고 얼마 지나지 않아 입사를 하게 되어 초기 신사업 구상단계부터 모든 과정을 거쳤습니다.
-									디자이너 포지션이었지만 이 프로젝트를 진행하면서 다른 많은 경험들을 하게 되었습니다.
-									업체와의 의사소통, 오픈 연기 등 여러 어려움에 직면하였지만 해결해나갔고
+									디자이너 포지션이었지만 이러한 프로젝트를 진행하면서 다른 많은 경험들을 하게 되었습니다.
+									업체와 의사소통 어려움 등 다양한 문제에 직면하였지만 해결해나갔고
 									2021년 2월, 무사히 런칭할 수 있었고 이를 계기로 사업 전반의 프로세스를 간접적으로나마 경험할 수 있었습니다.
 								</p>
 								<br><br>
@@ -54,7 +54,7 @@
 								   · 매장 마케팅 전략 수립 및 집행 <br>
 								   · 메뉴 촬영 진행 및 각종 홍보 물품 디자인<br>
 								   · 제품 및 비품 디자인<br>
-								   · ANON CAFE 관련 홍보 컨텐츠 제작 및 관리</p>
+								   · 홍보 컨텐츠 제작 및 관리</p>
 
 								   <br><br>
 
