--- a/generic3.html
+++ b/generic3.html
@@ -59,12 +59,11 @@
 								<h2>[ 회 고 ]</h2>
 								<p>이 프로젝트는 기획부터 끝까지 도맡았던 첫 프로젝트로, 디자인 업무가 주업무였던 저에게
 								   웹사이트 구축까지 할 수 있어 뜻깊었습니다. 비록 이 프로젝트는 한시적인 정보제공 페이지로써 
-								   로그인과 같은 기능이 없는 사이트였지만 이를 통해 앞으로 실제 다양한 서비스가 제공되는 웹이나 
-								   앱을 출시해보겠다는 목표를 가지게 되었습니다.<br><br>
+								   로그인과 같은 기능 구현이 없는 사이트였지만 이를 통해 사용자 친화적인 인사이트를 많이 얻을 수 있었습니다.<br><br>
 								   또한 디자인부터 구축까지 모두 경험해봄으로써 문제해결 능력이 매우 중요하다는 것을 깨닫게 되었습니다.
-								   대표적으로, 관련 인력이 없어 단독으로 퍼블리싱을 진행하다가 기한에 끝낼 수 없는 것을 예상하여 프리랜서를 도중에 투입하기도 하였습니다.
+								   일례로, 관련 인력이 없어 단독으로 퍼블리싱을 진행하다가 기한에 끝낼 수 없는 것을 예상하여 프리랜서를 도중에 투입하기도 하였습니다.
 								   또한 구현에 있어 여러가지 어려움이 있었지만 이를 통해 문제해결 능력을 기를 수 있었습니다.
-								   사진 보정, 동호수표 제작, 지도제작 등 세세한 디자인 작업들이 많았고 경험치가 많지 않아 힘들었지만 보람되고 또 한편으로는
+								   사진 보정, 지도제작 등 세세한 디자인 작업들이 많았고 경험치가 많지 않아 힘들었지만 보람되고 또 한편으로는
 								   아쉬움이 많이 남기도 한 프로젝트였습니다.
 								</p>
 							</section>
